--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,12 @@ body {
   transition: 0.3s ease;
 }
 
+.btn-primary,
+.btn-outline {
+    text-decoration: none;
+    display: inline-block;
+}
+
 .btn-primary:hover {
   transform: translateY(-3px);
   box-shadow: 0 12px 25px rgba(99, 102, 241, 0.35);
@@ -210,6 +216,12 @@ body {
 /* events */
 .featured {
   padding: 100px 8%;
+}
+
+.featured h2 {
+  display: flex;
+  justify-content: center;
+  font-size: 2.5em;
 }
 
 .events-grid {
